--- a/ismsp/result.htm
+++ b/ismsp/result.htm
@@ -17,7 +17,7 @@
 <body>
 
     <nav class="navbar bg-dark navbar-dark" style="margin-bottom:16px">
-        <a class="navbar-brand" href="#">ISMS-P 인증기준 트레이닝</a>
+        <a class="navbar-brand" href="ismsp.html">ISMS-P 인증기준 트레이닝</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#x" aria-expanded="true">
             <span class="navbar-toggler-icon"></span>
         </button>
